tests/NormalTests/paczka1/small_fuzzy/12909776.err
Error in line 6: 9qg2JS5BE S520 12,4
Error in line 5: ypd S126 60,5
